--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 
 // Add custom SCSS here
 @import "pages/home";
+@import "pages/cars";
 @import "components/navbar";
 @import "shared/layout";
 @import "components/navbar";
@@ -38,4 +39,3 @@
 body {
   font-family: 'CustomFont', sans-serif;
 }
-
