--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 // Add custom SCSS here
 @import "pages/home";
 @import "pages/cars";
+@import "pages/car-show";
 @import "components/navbar";
 @import "shared/layout";
 @import "components/navbar";
