--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,7 +16,7 @@
       font-weight: 600; // Semi-bold weight
       margin-bottom: 0rem;
       font-family: 'CustomFont', sans-serif;
-      color: fuchsia; // Use the CustomFont family
+      color: rgb(20, 182, 147); // Use the CustomFont family
     }
 
     p {
